--- a/src/RUCafe/MainMenuView.fxml
+++ b/src/RUCafe/MainMenuView.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.MainMenuController">
    <children>
@@ -12,5 +12,6 @@
             <Font size="20.0" />
          </font>
       </Label>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="149.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true" />
    </children>
 </AnchorPane>
