--- a/src/RUCafe/MainMenuView.fxml
+++ b/src/RUCafe/MainMenuView.fxml
@@ -12,6 +12,11 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="149.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="114.0" fitWidth="153.0" layoutX="60.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="114.0" fitWidth="153.0" layoutX="379.0" layoutY="71.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@CoffeePicMainMenu.jpg" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
