--- a/src/RUCafe/OrderingDonutsView.fxml
+++ b/src/RUCafe/OrderingDonutsView.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="RUCafe.OrderingDonuts"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.OrderingDonutsController">
+   <children>
+      <Label layoutX="216.0" layoutY="25.0" text="Order Donuts" textAlignment="CENTER" underline="true">
+         <font>
+            <Font size="23.0" />
+         </font></Label>
+      <ImageView fitHeight="82.0" fitWidth="127.0" layoutX="463.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@DonutsPicMainMenu1.jpg" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
 </AnchorPane>
