--- a/src/RUCafe/OrderingDonutsView.fxml
+++ b/src/RUCafe/OrderingDonutsView.fxml
@@ -11,11 +11,16 @@
          <font>
             <Font size="23.0" />
          </font></Label>
-      <ImageView fitHeight="82.0" fitWidth="127.0" layoutX="463.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="82.0" fitWidth="127.0" layoutX="448.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@DonutsPicMainMenu1.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="82.0" fitWidth="127.0" layoutX="29.0" layoutY="18.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@DonutsPicMainMenu1.jpg" />
+         </image>
+      </ImageView>
+      <ChoiceBox layoutX="29.0" layoutY="133.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
