--- a/src/RUCafe/MainMenuView.fxml
+++ b/src/RUCafe/MainMenuView.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="372.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.MainMenuController">
    <children>
-      <Button layoutX="39.0" layoutY="73.0" mnemonicParsing="false" text="Order Donuts">
+      <Button fx:id="OrderDonutsButton" layoutX="39.0" layoutY="73.0" mnemonicParsing="false" text="Order Donuts">
          <graphic>
             <ImageView fitHeight="139.0" fitWidth="153.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -37,7 +37,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button layoutX="70.0" layoutY="227.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="185.0" text="View Store Orders">
+      <Button fx:id="ViewStoreOrdersButton" layoutX="70.0" layoutY="227.0" mnemonicParsing="false" prefHeight="29.0" prefWidth="185.0" text="View Store Orders">
          <graphic>
             <ImageView fitHeight="39.0" fitWidth="115.0" pickOnBounds="true" preserveRatio="true">
                <image>
