--- a/src/RUCafe/CurrentOrderDetailView.fxml
+++ b/src/RUCafe/CurrentOrderDetailView.fxml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="RUCafe.CurrentOrderDetailController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.CurrentOrderDetailController">
+   <children>
+      <Label layoutX="201.0" layoutY="14.0" text="Your Order" underline="true">
+         <font>
+            <Font size="26.0" />
+         </font>
+      </Label>
+      <Label alignment="CENTER" layoutX="90.0" layoutY="92.0" text="Sub-Total" textAlignment="CENTER" underline="true" />
+      <Label alignment="CENTER" layoutX="92.0" layoutY="123.0" prefHeight="23.0" prefWidth="48.0" text="Sales Tax" textAlignment="CENTER" underline="true" />
+      <Label alignment="CENTER" layoutX="103.0" layoutY="157.0" text="Total" textAlignment="CENTER" underline="true" />
+      <TextField layoutX="149.0" layoutY="88.0" prefHeight="25.0" prefWidth="88.0" />
+      <TextField layoutX="149.0" layoutY="122.0" prefHeight="25.0" prefWidth="88.0" />
+      <TextField layoutX="149.0" layoutY="153.0" prefHeight="25.0" prefWidth="88.0" />
+      <ListView layoutX="265.0" layoutY="83.0" prefHeight="248.0" prefWidth="274.0" />
+      <Button layoutX="99.0" layoutY="207.0" mnemonicParsing="false" text="Remove Selected item " />
+      <Button layoutX="129.0" layoutY="256.0" mnemonicParsing="false" text="Place Order" />
+   </children>
 </AnchorPane>
