--- a/src/RUCafe/OrderingCoffeeView.fxml
+++ b/src/RUCafe/OrderingCoffeeView.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="RUCafe.OrderingCoffeeController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.OrderingCoffeeController">
+   <children>
+      <Label layoutX="229.0" text="Order Coffee" underline="true">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="110.0" fitWidth="175.0" layoutX="227.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@CoffeePicMainMenu.jpg" />
+         </image>
+      </ImageView>
+      <CheckBox layoutX="91.0" layoutY="173.0" mnemonicParsing="false" text="CheckBox" />
+      <CheckBox layoutX="91.0" layoutY="200.0" mnemonicParsing="false" text="CheckBox" />
+   </children>
 </AnchorPane>
