--- a/src/RUCafe/OrderingCoffeeView.fxml
+++ b/src/RUCafe/OrderingCoffeeView.fxml
@@ -5,20 +5,27 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.OrderingCoffeeController">
    <children>
-      <Label layoutX="229.0" text="Order Coffee" underline="true">
+      <Label layoutX="208.0" layoutY="164.0" text="Order Coffee" underline="true">
          <font>
             <Font size="25.0" />
          </font>
       </Label>
-      <ImageView fitHeight="110.0" fitWidth="175.0" layoutX="227.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="144.0" fitWidth="194.0" layoutX="184.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@CoffeePicMainMenu.jpg" />
          </image>
       </ImageView>
-      <CheckBox layoutX="91.0" layoutY="173.0" mnemonicParsing="false" text="CheckBox" />
-      <CheckBox layoutX="91.0" layoutY="200.0" mnemonicParsing="false" text="CheckBox" />
+      <CheckBox layoutX="188.0" layoutY="215.0" mnemonicParsing="false" text="Cream" />
+      <CheckBox layoutX="110.0" layoutY="215.0" mnemonicParsing="false" text="Milk" />
+      <CheckBox layoutX="187.0" layoutY="251.0" mnemonicParsing="false" text="Whipped Cream" />
+      <CheckBox layoutX="110.0" layoutY="251.0" mnemonicParsing="false" text="Syrup" />
+      <CheckBox layoutX="110.0" layoutY="290.0" mnemonicParsing="false" text="Caramel" />
+      <TextField layoutX="187.0" layoutY="321.0" />
+      <Label layoutX="129.0" layoutY="325.0" text="Cost:" />
+      <Button layoutX="371.0" layoutY="321.0" mnemonicParsing="false" text="Add To Order" />
+      <ComboBox layoutX="310.0" layoutY="211.0" prefWidth="150.0" />
+      <ComboBox layoutX="310.0" layoutY="247.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
