--- a/src/RUCafe/CurrentOrderDetailView.fxml
+++ b/src/RUCafe/CurrentOrderDetailView.fxml
@@ -11,14 +11,14 @@
             <Font size="26.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" layoutX="90.0" layoutY="92.0" text="Sub-Total" textAlignment="CENTER" underline="true" />
-      <Label alignment="CENTER" layoutX="92.0" layoutY="123.0" prefHeight="23.0" prefWidth="48.0" text="Sales Tax" textAlignment="CENTER" underline="true" />
-      <Label alignment="CENTER" layoutX="103.0" layoutY="157.0" text="Total" textAlignment="CENTER" underline="true" />
-      <TextField layoutX="149.0" layoutY="88.0" prefHeight="25.0" prefWidth="88.0" />
-      <TextField layoutX="149.0" layoutY="122.0" prefHeight="25.0" prefWidth="88.0" />
-      <TextField layoutX="149.0" layoutY="153.0" prefHeight="25.0" prefWidth="88.0" />
-      <ListView layoutX="255.0" layoutY="83.0" prefHeight="248.0" prefWidth="274.0" />
-      <Button layoutX="99.0" layoutY="207.0" mnemonicParsing="false" text="Remove Selected item " />
-      <Button layoutX="129.0" layoutY="256.0" mnemonicParsing="false" text="Place Order" />
+      <Label alignment="CENTER" layoutX="77.0" layoutY="83.0" text="Sub-Total" textAlignment="CENTER" underline="true" />
+      <Label alignment="CENTER" layoutX="79.0" layoutY="135.0" prefHeight="23.0" prefWidth="48.0" text="Sales Tax" textAlignment="CENTER" underline="true" />
+      <Label alignment="CENTER" layoutX="88.0" layoutY="187.0" text="Total" textAlignment="CENTER" underline="true" />
+      <ListView fx:id="currentOrderListView" layoutX="255.0" layoutY="83.0" prefHeight="248.0" prefWidth="274.0" />
+      <Button fx:id="RemoveSelectedItem" layoutX="71.0" layoutY="229.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="138.0" text="Remove Selected item " />
+      <Button fx:id="placeOrder" layoutX="101.0" layoutY="284.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="78.0" text="Place Order" />
+      <TextArea fx:id="subTotalCurrentOrder" layoutX="140.0" layoutY="73.0" prefHeight="5.0" prefWidth="88.0" />
+      <TextArea fx:id="salesTaxCurrentOrder" layoutX="140.0" layoutY="128.0" prefHeight="38.0" prefWidth="88.0" />
+      <TextArea fx:id="totalCurrentOrder" layoutX="140.0" layoutY="176.0" prefHeight="38.0" prefWidth="88.0" />
    </children>
 </AnchorPane>
