--- a/src/RUCafe/CoffeeView.fxml
+++ b/src/RUCafe/CoffeeView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.OrderingCoffeeController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.CoffeeController">
    <children>
       <Label layoutX="220.0" layoutY="158.0" text="Order Coffee" underline="true">
          <font>
