--- a/src/RUCafe/DonutView.fxml
+++ b/src/RUCafe/DonutView.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.OrderingDonutsController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RUCafe.DonutController">
    <children>
       <Label layoutX="222.0" layoutY="1.0" text="Order Donuts" textAlignment="CENTER" underline="true">
          <font>
