--- a/src/RUCafe/YourOrderView.fxml
+++ b/src/RUCafe/YourOrderView.fxml
@@ -15,8 +15,8 @@
       <Label alignment="CENTER" layoutX="106.0" layoutY="134.0" prefHeight="23.0" prefWidth="48.0" text="Sales Tax" textAlignment="CENTER" underline="true" />
       <Label alignment="CENTER" layoutX="115.0" layoutY="186.0" text="Total" textAlignment="CENTER" underline="true" />
       <ListView fx:id="currentOrderListView" layoutX="264.0" layoutY="71.0" prefHeight="248.0" prefWidth="274.0" />
-      <Button fx:id="RemoveSelectedItem" layoutX="110.0" layoutY="226.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="138.0" text="Remove Selected item " />
-      <Button fx:id="placeOrder" layoutX="140.0" layoutY="273.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="78.0" text="Place Order" />
+      <Button fx:id="RemoveSelectedItem" layoutX="110.0" layoutY="226.0" mnemonicParsing="false" onAction="#removeFromCurrentOrder" prefHeight="38.0" prefWidth="138.0" text="Remove Selected item " />
+      <Button fx:id="placeOrder" layoutX="140.0" layoutY="273.0" mnemonicParsing="false" onAction="#placeOverallOrder" prefHeight="38.0" prefWidth="78.0" text="Place Order" />
       <TextArea fx:id="subTotalCurrentOrder" layoutX="167.0" layoutY="72.0" prefHeight="5.0" prefWidth="88.0" />
       <TextArea fx:id="salesTaxCurrentOrder" layoutX="167.0" layoutY="127.0" prefHeight="38.0" prefWidth="88.0" />
       <TextArea fx:id="totalCurrentOrder" layoutX="167.0" layoutY="175.0" prefHeight="38.0" prefWidth="88.0" />
